--- a/Stylew1.css
+++ b/Stylew1.css
@@ -3,7 +3,10 @@ body {
   border: 2px skyblue solid;
   margin-top: 65px; 
   margin-left: 65px;/* Removes default margin for precise placement */
-}
+ 
+  }
+  
+
 .Mtek{
   position: absolute;
   bottom: 0;
@@ -15,17 +18,36 @@ body {
 
 }
 .logo {
-  position: absolute; /* Positions the logo relative to the viewport */
-  top: 0; /* Aligns to the top of the page */
-  left: 0; /* Aligns to the left of the page */
-  padding: 10px; /* Adds space around the logo */
-  font-size: 24px; /* Adjust the font size of the logo text */
-  font-weight: bold; /* Makes the text bold */
-  color:red; /* Sets the text color */
-  background-color:yellowgreen; /* Optional: Light background color */
-  border: 1px solid #ddd; /* Optional: Adds a border for emphasis */
-  z-index: 10; /* Ensures it stays on top of other elements */
+  position: fixed;
+  top: 0;
+  left: 0;
+  color: red;
+  background-color: yellow;
+  padding: 5px 10px;
+  border-radius: 5px;
+  z-index: 75;
+  font-size: 25px;
 }
-.element {
-  margin: 10px 0 0 10px; /* Top, Right, Bottom, Left */
+
+.left-links{
+  position: fixed;
+  top: 60px;
+  left: 10px;
+  z-index: 20;
+}
+.left-links a {
+  display: block;
+  margin: 5px 0;
+  padding: 5px;
+  border-radius: 3px;
+}
+.left-links a img{
+  width: 18px;
+  margin-right: 5px;
+  vertical-align: middle;
+
+}
+.left-links a:hover{
+  background-color: #0056b3;
+  text-decoration: underline;
 }
