--- a/Stylew1.css
+++ b/Stylew1.css
@@ -51,3 +51,22 @@ body {
   background-color: #0056b3;
   text-decoration: underline;
 }
+.top-links{
+  position: fixed;
+  top: 10px;
+  left: 25%;
+  z-index: 20;
+}
+.top-links a {
+  display: inline-block;
+  margin: 0 15px;
+  padding: 5px;
+  border-radius: 3px;
+}
+
+
+
+.top-links a:hover{
+  background-color: #0056b3;
+
+}
