--- a/Stylew1.css
+++ b/Stylew1.css
@@ -94,30 +94,33 @@ body {
 
 }
 
-*{
+.What-we-do{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-body{
+.What-we-do body{
   background-color: orange;
   color: red;
   padding: 25px;
 }
-.page-header{
+.What-we-do page-header{
   text-align: center;
 }
-text-header h1{
+
+.What-we-do h1{
   font-size: 1.2rem;
   color: blue;
 }
 
-.page-header p {
+
+.What-we-do p {
   font-size: 1.2rem;
   color: #555;
 }
 /* Service Boxes Container */
-.services-container {
+
+.What-we-do services-container {
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
@@ -161,4 +164,32 @@ a {
 
 a:hover {
   background-color: #0d56c9; /* Darker shade of blue */
+}
+
+
+
+
+/*Here is my Contact page CSS*/
+.Contact-us{
+  background: navajowhite;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.header h1{
+ text-align: center;
+  font-size: 2.5rem;
+
+}
+.header p{
+  text-align: center;
+  font-size: .90rem;
+}
+.contact-container h2{
+  text-align: center;
+}
+.contact-container p{
+  text-align: center;
+  font-size: medium;
+
 }
